Update reloading, fix 'required' overflow

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -311,6 +311,17 @@ small {
             color: @VersionErrored;
         }
     }
+
+    .required {
+
+        span {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            display: inline-block;
+            width: 100%;
+        }
+    }
 }
 
 /* @end Package */
